--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
         "tailwindcss": "^2.2.5",
         "vue": "^3.0.5",
         "vue-loader": "^16.1.2"
+    },
+    "dependencies": {
+        "dropzone-vue": "^0.1.8",
+        "jquery": "^3.6.0"
     }
 }
